# Licensed under the Apache-2.0 license

[package]
name = "mcu-hw-model"
version.workspace = true
edition.workspace = true

[features]
default = []
fpga_realtime = [
    "dep:uio",
    "dep:mcu-config-fpga",
    "caliptra-core-tools/hw-model-fpga_subsystem",
]
itrng = []

[dependencies]
caliptra-core-tools.workspace = true
anyhow.workspace = true
bitfield.workspace = true
ecdsa.workspace = true
emulator-bmc.workspace = true
emulator-caliptra.workspace = true
emulator-periph.workspace = true
emulator-registers-generated.workspace = true
fips204.workspace = true
hex.workspace = true
int-enum.workspace = true
mcu-builder.workspace = true
mcu-config-fpga = { workspace = true, optional = true }
mcu-config.workspace = true
mcu-rom-common.workspace = true
mcu-testing-common.workspace = true
mcu-otp-lifecycle = { workspace = true, features = ["sha3", "std"] }
p384.workspace = true
poll-common.workspace = true
rand.workspace = true
registers-generated.workspace = true
romtime.workspace = true
semver.workspace = true
sha2.workspace = true
sha3.workspace = true
thiserror.workspace = true
tock-registers.workspace = true
uio = { workspace = true, optional = true }
zerocopy.workspace = true

[dev-dependencies]
nix.workspace = true
