# Licensed under the Apache-2.0 license

[package]
name = "network-xtask"
version = "0.1.0"
edition = "2021"
description = "Command-line toolkit for network stack development and testing"

[lib]
name = "network_xtask"
path = "src/lib.rs"

[[bin]]
name = "network-xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
