# Licensed under the Apache-2.0 license

[package]
name = "emulator-registers-generated"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
caliptra-core-tools = { workspace = true, features = ["2_0"] }
registers-generated.workspace = true
tock-registers.workspace = true
