# Licensed under the Apache-2.0 license

[package]
name = "bare-metal-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
caliptra-core-firmware = { workspace = true, default-features = false, features = ["2_0"] }
romtime.workspace = true

[target.'cfg(target_arch = "riscv32")'.dependencies]
rv32i.workspace = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
