# Licensed under the Apache-2.0 license

[package]
name = "tests-integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
fpga_realtime = ["mcu-hw-model/fpga_realtime"]

[dependencies]
chrono.workspace = true
flash-image.workspace = true
mcu-builder.workspace = true
mcu-config.workspace = true
mcu-config-emulator.workspace = true
mcu-rom-common.workspace = true
pldm-fw-pkg.workspace = true
tempfile.workspace = true
uuid.workspace = true
zerocopy.workspace = true

[dev-dependencies]
caliptra-api-types.workspace = true
caliptra-api.workspace = true
caliptra-builder.workspace = true
caliptra-hw-model.workspace = true
mcu-hw-model.workspace = true
registers-generated.workspace = true
tock-registers.workspace = true

