[package]
name = "basic-usage"
version = "0.1.0"
edition = "2021"
description = "Basic usage example for Caliptra Utility Host Library"

[dependencies]
caliptra-util-host-core = { path = "../../caliptra-util-host-core", features = ["async"] }
caliptra-util-host-transports = { path = "../../caliptra-util-host-transports" }
caliptra-util-host-plugins = { path = "../../caliptra-util-host-plugins" }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
env_logger = "0.10"
log = "0.4"
clap = { version = "4.0", features = ["derive"] }