# Licensed under the Apache-2.0 license

[package]
name = "network-app-rom-test"
version.workspace = true
edition.workspace = true
description = "Test applications for Network Coprocessor ROM"

[dependencies]
lwip-rs = { workspace = true, default-features = false, features = ["baremetal"], optional = true }
network-drivers.workspace = true
network-hil.workspace = true
zerocopy.workspace = true

[features]
default = []
lwip-dhcp = ["lwip-rs"]
lwip-dhcp6 = ["lwip-rs", "lwip-rs/baremetal-ipv6"]
lwip-tftp = ["lwip-rs", "lwip-rs/baremetal-tftp"]
lwip-tftpv6 = ["lwip-rs", "lwip-rs/baremetal-tftpv6"]
